@@ -2,6 +2,8 @@
 
 	* configure.in: Made gedit plugin and panel applet soft
 	dependencies.
+	* libseahorse/seahorse-context.c: Builds properly without 
+	keyserver support.
 	
 2006-01-16  Nate Nielsen  <nielsen@memberwebs.com>
 
